# cowsay

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: FindLibGoogleGFlags.cmake  FindLibGoogleTest.cmake  FindLibUnicodeDisplayWidth.cmake
cowsay_cli/: CMakeLists.txt  main.cpp
cowsay_cli/src/: main.cpp
libcowsay/: CMakeLists.txt
libcowsay/include/cowsay/: cowsay.h
libcowsay/src/: cowsay.cpp
libcowsay/test/: cowsay_test.cpp
